# repo01

./: .gitignore
160.Orderflow/: branchprocess_config.json  kintone_csv_attachment.js  kintone_inspection_pdf.js  kintone_order_helper.js  kintone_orderflow_utils.js  kintone_payment_helper.js
DFReleaseList/: kintone_auto_status_after_copy.js  kintone_bulk_status_advance.js  kintone_copy_subtable_rows.js  kintone_copy_to_app_on_status.js  kintone_doc_number.js  kintone_recordNo.js  kintone_trigger_plugin_on_status.js
DFcancel/: copy_related_to_subtable.js
DFrelation/: df_cancel_summary.py  search_circuit_v2.py  search_circuit_v3.py
kensetsu/: 01.semi_trns_cab.py  cab0Xn_count.py  debug_shape.py  (+4 more)
nw-device-manager/backend/: Dockerfile  alembic.ini  pyproject.toml
nw-device-manager/backend/alembic/: env.py
nw-device-manager/backend/alembic/versions/: 001_add_email_to_users.py
nw-device-manager/backend/app/: config.py  init_db.py  main.py  seed.py  seed_locations.py
nw-device-manager/backend/app/auth/: dependencies.py  jwt.py
nw-device-manager/backend/app/models/: __init__.py  audit_log.py  host.py  import_log.py  office.py  port.py  prefecture.py  region.py  reservation.py  slot.py  user.py
nw-device-manager/backend/app/routers/: admin.py  auth.py  hosts.py  import_.py  nce_sync.py  offices.py  ports.py  regions.py  reservations.py  statistics.py
nw-device-manager/backend/app/schemas/: auth.py  host.py  region.py  reservation.py  statistics.py
nw-device-manager/backend/app/services/: import_service.py  nce_client.py  nce_parser.py  task_manager.py
(+68 files in other folders)
